alignment fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -55,7 +55,7 @@ a {
 .title {
   font-size: 3rem;
   text-align: center;
-  margin-bottom: 0;
+  margin: 4rem 0 2rem 0;
 }
 
 /* Menu */
@@ -69,7 +69,7 @@ a {
   border-radius: 50%;
   width: 25px;
   height: 25px;
-  margin: 2rem 3rem;
+  margin: 2rem;
   transform: scale(1);
   transition: 0.4s;
 }
@@ -82,9 +82,9 @@ a {
 .hero-options {
   position: absolute;
   top: 0;
-  padding: 2rem 0;
+  padding: 3rem 0;
   margin-left: -2rem;
-  width: 100vw;
+  width: calc(100vw + 2rem);
   background: #00BFB3;
   display: flex;
   flex-direction: column;
@@ -92,7 +92,11 @@ a {
   justify-content: center;
 }
 
-.guest-list {
+.post, .guest-list {
+  margin-left: 2rem;
+}
+
+.guest-list, .guest-add {
   font-size: 1.25rem;
   line-height: 3rem;
   border: none;
@@ -104,7 +108,7 @@ a {
   outline: none;
 }
 
-.guest-list:hover {
+.guest-list:hover, .post:hover {
   cursor: pointer;
 }
 
@@ -113,7 +117,7 @@ a {
   background: #000;
   font-weight: normal;
   padding: .5rem 1rem;
-  margin-left: 1rem;
+  margin-right: .5rem;
   font-size: 1.25rem;
   border-radius: 10px;
   font-family: inherit;
@@ -160,13 +164,14 @@ input:hover {
 }
 
 .guest:hover {
-  transform: scale(1.5);
+  transform: scale(1.2);
 }
 
 .guest-wrapper {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .side-scroll {
